[package]
name = "stop_ffi_callback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4.0"
tokio = { version = "1.6.1", features = ["full"] }
futures = "0.3.21"
tokio-util = "0.7.4"
libc = "0.2.139"
lazy_static = "1.4.0"